--- a/app/Qtalk/templates/users.html
+++ b/app/Qtalk/templates/users.html
@@ -20,26 +20,48 @@
 {%for user in users.items%}
 <div class="card text-center m-4">
   <div class="card-header">
-    {{user.username}}
+    <a href="{{url_for('user', username= user.username)}}" class="btn btn-secondary">{{user.username}}</a>
   </div>
   <div class="card-body">
     <div class="row">
-      <div class="col " align="center">
+      <div class="col mt-2" align="center">
           <h5>
-            {{ user.followers.count() }} <br/> <span> فالوور</span>
+            {% if user == current_user %}
+            {% elif current_user.is_authenticated %}
+                {% if not current_user.is_following(user) %}
+            <p>
+              <button type="button" id="f-{{user.username}}" class="mt-2 btn btn-outline-success Follow" style="display:inline;">فالو</button>
+              <button type="button" id="u-{{user.username}}" class="mt-2 btn btn-outline-danger unFollow" style="display:none;">آنفالو</button>
+            </p>
+
+            {% else %}
+            <p>
+              <button type="button" id="u-{{user.username}}" class="mt-2 btn btn-outline-danger unFollow" style="display:inline;">آنفالو</button>
+              <button type="button" id="f-{{user.username}}" class="mt-2 btn btn-outline-success Follow" style="display:none;">فالو</button>
+            </p>
+            {% endif %}
+            {% endif %}
+          </h5>
+      </div>
+      <div class="col ml-4" align="center">
+        <img class="rounded-circle users-img" src="{{ url_for('static', filename='profile_pics/'+ user.image_file) }}">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col" align="center">
+          <h5>
+            <my id="followers_count-{{user.username}}">{{ user.followers.count() }}</my> <br/> <span> فالوور</span>
           </h5>
       </div>
       <div class="col" align="center">
           <h5>
-            {{ user.followed.count() }} <br/> <span>فالوئینگ </span>
-
+            <my id="following_count-{{user.username}}">{{ user.followed.count() }}</my> <br/> <span>فالوئینگ </span>
           </h5>
       </div>
     </div>
     {% if user.status %}
     <p class="card-text">{{user.status}}</p>
     {% endif %}
-    <a href="{{url_for('user', username= user.username)}}" class="btn btn-primary">بازدید از پروفایل</a>
   </div>
   <div class="card-footer text-muted">
   آخرین بازدید در {{user.last_seen}}
