--- a/app/Qtalk/templates/users.html
+++ b/app/Qtalk/templates/users.html
@@ -30,14 +30,14 @@
             {% elif current_user.is_authenticated %}
                 {% if not current_user.is_following(user) %}
             <p>
-              <button type="button" id="f-{{user.username}}" class="mt-2 btn btn-outline-success Follow" style="display:inline;">فالو</button>
-              <button type="button" id="u-{{user.username}}" class="mt-2 btn btn-outline-danger unFollow" style="display:none;">آنفالو</button>
+              <button type="button" id="f-{{user.id}}" class="mt-2 btn btn-outline-success Follow" style="display:inline;">فالو</button>
+              <button type="button" id="u-{{user.id}}" class="mt-2 btn btn-outline-danger unFollow" style="display:none;">آنفالو</button>
             </p>
 
             {% else %}
             <p>
-              <button type="button" id="u-{{user.username}}" class="mt-2 btn btn-outline-danger unFollow" style="display:inline;">آنفالو</button>
-              <button type="button" id="f-{{user.username}}" class="mt-2 btn btn-outline-success Follow" style="display:none;">فالو</button>
+              <button type="button" id="u-{{user.id}}" class="mt-2 btn btn-outline-danger unFollow" style="display:inline;">آنفالو</button>
+              <button type="button" id="f-{{user.id}}" class="mt-2 btn btn-outline-success Follow" style="display:none;">فالو</button>
             </p>
             {% endif %}
             {% endif %}
@@ -50,12 +50,12 @@
     <div class="row">
       <div class="col" align="center">
           <h5>
-            <my id="followers_count-{{user.username}}">{{ user.followers.count() }}</my> <br/> <span> فالوور</span>
+            <my id="followers_count-{{user.id}}">{{ user.followers.count() }}</my> <br/> <span> فالوور</span>
           </h5>
       </div>
       <div class="col" align="center">
           <h5>
-            <my id="following_count-{{user.username}}">{{ user.followed.count() }}</my> <br/> <span>فالوئینگ </span>
+            <my id="following_count-{{user.id}}">{{ user.followed.count() }}</my> <br/> <span>فالوئینگ </span>
           </h5>
       </div>
     </div>
