--- a/app/Qtalk/templates/create_post.html
+++ b/app/Qtalk/templates/create_post.html
@@ -8,14 +8,14 @@
         <filfieldset class="form-group ">
             <div class="form-group">
                 {% if form.content.errors %}
-                {{ form.content(class="form-control form-control-lg is-invalid") }}
+                {{ form.content(id="summernote", class="form-control form-control-lg is-invalid") }}
                   <div class="invalid-feedback">
                       {% for error in form.content.errors %}
                         <span>{{ error }}</span>
                       {% endfor %}
                   </div>
                 {% else %}
-                    {{ form.content(class="form-control form-control-lg", rows="10") }}
+                    {{ form.content(id="summernote", class="form-control form-control-lg", rows="10") }}
                 {% endif %}
             </div>
             <div class="form-group ">
