--- a/app/Qtalk/templates/post.html
+++ b/app/Qtalk/templates/post.html
@@ -27,7 +27,7 @@
 <br>
 {% if post.comments %}
 {% for comment in post.comments %}
-<div class="card" style="margin:20px;">
+<div class="card" id="comment-{{comment.id}}" style="margin:20px;">
 <div class="card-body">
 <img class="rounded-circle article-img float-right" src="{{ url_for('static', filename='profile_pics/'+ comment.sender.image_file) }}">
 
@@ -36,6 +36,11 @@
   <a class="mr-4 float-right" href="{{url_for('user', username=comment.sender.username)}}">{{ comment.sender.username }}</a>
 </h5>
 <h6 class="card-subtitle mb-2 text-muted">{{ comment.date_commented.strftime('%Y-%m-%d') }}</h6>
+{% if post.author == current_user or comment.sender == current_user %}
+    <div>
+        <input class="btn btn-danger btn-sm m-1 delete_comment_modal" id="{{ comment.id }}" type="submit" value="حذف">
+    </div>
+  {% endif %}
 <hr>
 <p class="card-text article-content ">{{comment.content|safe}}</p>
 </div>
@@ -151,6 +156,21 @@
                     {{ form2.submit(class="btn btn-outline-info") }}
                 </div>
         </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="deleteCommentModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="deleteModalLabel">از پاک شدن پست اطمینان داری؟</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-footer modal-delete-comment">
       </div>
     </div>
   </div>
