--- a/app/Qtalk/templates/user_post.html
+++ b/app/Qtalk/templates/user_post.html
@@ -44,6 +44,7 @@
     <button type="button" id="f-{{user.id}}" class="btn btn-outline-success buttonp Follow" style="display:none">فالو</button>
   </p>
   {% endif %}
+  <a class="btn btn-outline-info mb-4" href="{{url_for('conversation', username=user.username, unread=1)}}" >ارسال پیام</a>
   {% endif %}
 </div>
     </div>
