--- a/app/Qtalk/templates/account.html
+++ b/app/Qtalk/templates/account.html
@@ -67,6 +67,10 @@
               {{ form.submit(class="btn btn-outline-info") }}
           </div>
       </form>
+      <button type="button" class="btn btn-danger float-right" data-toggle="modal" data-target="#newPassModal">
+        تغییر کلمه عبور
+      </button>
+      <br><br>
   </div>
 
   <div style="direction:ltr;text-align: left">
@@ -145,4 +149,61 @@
 
     {% endif %}
     {% endfor %}
+    <div class="modal fade" id="newPassModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">تغیر کلمه عبور</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form method="POST" action="{{ url_for('change_pwd') }}">
+            {{ form2.hidden_tag() }}
+            <filfieldset class="form-group ">
+                <div class="form-group">
+                    {{ form2.old_password.label }}
+                    {% if form2.old_password.errors %}
+                    {{ form2.content(class="form-control form-control-lg is-invalid") }}
+                      <div class="invalid-feedback">
+                          {% for error in form2.old_password.errors %}
+                            <span>{{ error }}</span>
+                          {% endfor %}
+                      </div>
+                    {% else %}
+                        {{ form2.old_password(class="form-control form-control-lg") }}
+                    {% endif %}
+                    {{ form2.new_password.label }}
+                    {% if form2.new_password.errors %}
+                    {{ form2.new_password(class="form-control form-control-lg is-invalid") }}
+                      <div class="invalid-feedback">
+                          {% for error in form2.new_password.errors %}
+                            <span>{{ error }}</span>
+                          {% endfor %}
+                      </div>
+                    {% else %}
+                        {{ form2.new_password(class="form-control form-control-lg") }}
+                    {% endif %}
+                    {{ form2.confirm_new_password.label }}
+                    {% if form2.confirm_new_password.errors %}
+                    {{ form2.confirm_new_password(class="form-control form-control-lg is-invalid") }}
+                      <div class="invalid-feedback">
+                          {% for error in form2.confirm_new_password.errors %}
+                            <span>{{ error }}</span>
+                          {% endfor %}
+                      </div>
+                    {% else %}
+                        {{ form2.confirm_new_password(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">انصراف</button>
+                  {{ form2.submit(class="btn btn-outline-info") }}
+                </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock content%}
